--- a/aqaJava/pom.xml
+++ b/aqaJava/pom.xml
@@ -8,5 +8,8 @@
     <artifactId>aqaJava</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+
 
 </project>
